tests/baselines/reference/computedPropertyNames24_ES5(target=es2015).errors.txt
computedPropertyNames24_ES5.ts(7,6): error TS2466: 'super' cannot be referenced in a computed property name.


==== computedPropertyNames24_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [super.bar()]() { }
         ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }